[gd_scene load_steps=14 format=3 uid="uid://b1edfbr0tkm14"]

[ext_resource type="Script" uid="uid://dc2kc6wp0sup0" path="res://game/entities/npc/npc.gd" id="1_e3lg2"]
[ext_resource type="Script" uid="uid://b45j6nsthgcca" path="res://game/entities/components/agent_component.gd" id="2_7bf1a"]
[ext_resource type="Script" uid="uid://n1nqv1y2oarq" path="res://game/entities/state_machine/state_machine.gd" id="3_machine"]
[ext_resource type="Script" uid="uid://b8oatrk6enlqx" path="res://game/entities/npc/states/idle.gd" id="4_npc_idle"]
[ext_resource type="Script" uid="uid://m1y8ucjnjvpa" path="res://game/entities/npc/states/moving.gd" id="5_npc_moving"]
[ext_resource type="Script" uid="uid://8icop2umtjnn" path="res://game/entities/components/footsteps_component.gd" id="5_y6suo"]
[ext_resource type="Script" uid="uid://b64leva71xtpc" path="res://game/entities/npc/states/avoiding.gd" id="6_npc_avoiding"]
[ext_resource type="Script" uid="uid://clfsfhgg00m0y" path="res://game/entities/components/grid_dynamic_occupant_component.gd" id="8_5dlhl"]
[ext_resource type="Script" uid="uid://3nokqjkmsejd" path="res://game/entities/components/interactions/talk_on_interact.gd" id="10_talk"]
[ext_resource type="Script" uid="uid://i8ryj3gltins" path="res://game/entities/components/interactions/shop_on_interact.gd" id="11_shop"]
[ext_resource type="Script" path="res://game/entities/components/cutscene_actor_component.gd" id="12_cutscene_actor"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wfxk4"]
size = Vector2(8, 11.5)

[sub_resource type="CircleShape2D" id="CircleShape2D_player_blocker"]

[node name="NPC" type="CharacterBody2D"]
collision_layer = 8
collision_mask = 6
script = ExtResource("1_e3lg2")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -6.25)
shape = SubResource("RectangleShape2D_wfxk4")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -10)

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
volume_db = -20.0
max_distance = 300.0
attenuation = 2.0
panning_strength = 2.0

[node name="PlayerBlockerArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 7

[node name="PlayerBlockerShape" type="CollisionShape2D" parent="PlayerBlockerArea"]
position = Vector2(0, -10)
shape = SubResource("CircleShape2D_player_blocker")

[node name="StateMachine" type="Node2D" parent="." node_paths=PackedStringArray("starting_state")]
script = ExtResource("3_machine")
starting_state = NodePath("Idle")

[node name="Idle" type="Node2D" parent="StateMachine"]
script = ExtResource("4_npc_idle")

[node name="Moving" type="Node2D" parent="StateMachine"]
script = ExtResource("5_npc_moving")

[node name="Avoiding" type="Node2D" parent="StateMachine"]
script = ExtResource("6_npc_avoiding")

[node name="Components" type="Node" parent="."]

[node name="CutsceneActorComponent" type="Node" parent="Components"]
script = ExtResource("12_cutscene_actor")

[node name="AgentComponent" type="Node" parent="Components"]
script = ExtResource("2_7bf1a")
kind = 2
agent_id = &"npc"

[node name="GridOccupantComponent" type="Node" parent="Components" node_paths=PackedStringArray("position_source", "collision_shape")]
script = ExtResource("8_5dlhl")
position_source = NodePath("../../Markers/Feet")
entity_type = 6
auto_register_on_ready = false
collision_shape = NodePath("../../CollisionShape2D")

[node name="FootstepsComponent" type="Node" parent="Components" node_paths=PackedStringArray("audio_player")]
script = ExtResource("5_y6suo")
audio_player = NodePath("../../AudioStreamPlayer2D")

[node name="TalkOnInteract" type="Node" parent="Components"]
script = ExtResource("10_talk")

[node name="ShopOnInteract" type="Node" parent="Components"]
script = ExtResource("11_shop")
priority = 10

[node name="Markers" type="Node2D" parent="."]
position = Vector2(0, -8)

[node name="Feet" type="Marker2D" parent="Markers"]
position = Vector2(0, 8)

[connection signal="body_entered" from="PlayerBlockerArea" to="." method="_on_player_blocker_area_body_entered"]
[connection signal="body_exited" from="PlayerBlockerArea" to="." method="_on_player_blocker_area_body_exited"]
